new additional requirements